# web_app

core/: db.sqlite3  manage.py  pyproject.toml
core/myproject/: settings.py
