[tool.poetry]
name = "first-web-app"
version = "0.1.0"
description = ""
authors = ["MillyBillygan <ilia.niculin@gmail.com>"]
readme = "README.md"
packages = [{include = "first_web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
